# roomkit-sandbox

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backends.md  commands.md
src/roomkit_sandbox/: __init__.py  _shared.py  backend.py  commands.py  docker_backend.py  executor.py  k8s_backend.py  smolbsd_backend.py
tests/: test_commands.py  test_executor.py  test_k8s_backend.py  test_smolbsd_backend.py
