[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomkit-sandbox"
version = "0.1.0"
description = "Container-based sandbox executor for RoomKit — gives AI agents sandboxed command execution via RTK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sylvain Boily", email = "sylvainboilydroid@gmail.com" }]
keywords = ["roomkit", "sandbox", "ai", "agents", "rtk", "docker", "container"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "roomkit>=0.7.0a8",
]

[tool.uv.sources]
roomkit = { path = "../roomkit", editable = true }

[project.optional-dependencies]
docker = ["docker>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/roomkit_sandbox"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
