[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomkit-sandbox"
version = "0.2.2"
description = "Container-based sandbox executor for RoomKit — gives AI agents sandboxed command execution via RTK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sylvain Boily", email = "sylvainboilydroid@gmail.com" }]
keywords = ["roomkit", "sandbox", "ai", "agents", "rtk", "docker", "container"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "roomkit>=0.7.0a9",
]

[tool.uv.sources]
roomkit = { path = "../roomkit", editable = true }

[project.optional-dependencies]
docker = ["docker>=7.0"]
kubernetes = ["kubernetes>=31.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/roomkit_sandbox"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
# docker is an optional dependency — conditional import is guarded by try/except
unresolved-import = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "kubernetes>=35.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
